--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -7,24 +7,22 @@ indicator_sort_order: 11-12-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: bar  # chart types include: bar, line, binary 
+graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: km² 
-data_start_values:  # initialize the field to be shown
- - field: Lärmbelastete Fläche 
-   value: über 55 dB 
- - field: Lärmbelastete Fläche 
-   value: über 65 dB
- - field: Lärmbelastete Fläche 
-   value: über 75 dB
+computation_units: Hektar (ha)
+data_start_values:  # initialize the field to be shown  
+ - field: Naherholungsflächen 
+   value: ha / 1000 EW 
+ - field: Naherholungsflächen 
+   value: ha gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Lärmbelastete Fläche in km²
+computation_definitions: Naherholungsflächen (mit Wald) in Hektar je 1000 Einwohner/-innen
 
-SOURCE_TYPE: <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplan der Stadt Ingolstadt</a>  # data source  
-source_earliest_available_1: 2020
-source_periodicity_1: Nächste Lärmkartierung vsl. 2029
+SOURCE_TYPE: Referat für Stadtentwicklung und Baurecht der Stadt Ingolstadt  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -33,15 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Rahmen der Lärmaktionsplanung wurden die Daten zur von Umgebungslärm belasteten Flächen 2020 aktualisiert und bilden Schätzungen ab. Die Lautstärke wird in Dezibel (dB) angegeben. Die Aktionsplanung erfolgt auf Grundlage der EU-Umgebungslärmrichtlinie 2002/49/EG und deren nationaler Umsetzung in §§ 47a-f BImSchG sowie Art. 2 Abs. 3 und Art. 4 Satz 2 BayImSchG.<br>
-<br>
-Werte über 55 dB entsprechen einer hohen Belastung. Werte darüber hinaus überschreiten die Anhaltswerte bzw. stellen eine sehr hohe Belastung sowie eine Gesundheitsgefährdung dar.<br>
-<br>
-Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzten Personen in Ingolstadt und die Zusammensetzung der Lärmindizes finden Sie auf der Seite der <a href="https://www.ingolstadt.de/laermaktionsplan">Lärmaktionsplanung der Stadt Ingolstadt</a> im Kurzbericht.<br>
-<br>
-Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur Reduzierung der lärmbelasteten Fläche und Personen umgesetzt. Weitere Informationen hierzu finden Sie ebenfalls auf der Seite der Stadt Ingolstadt<br> 
+Dieser Indikator weist die Naherholungsflächen mit Wald in Hektar (ha) je 1000 Einwohner/-innen aus sowie die Naherholungsflächen gesamt in Hektar. Aufgrund des Wachstums der Bevölkerung in den letzten Jahren bei nahezu gleichbleibender Naherholungsfläche ist ein Rückgang der Fläche im Verhältnis zur Einwohnerzahl zu verzeichnen. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+K2.7: Naherholung mit ökologischen Aspekten vereinen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
