--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -90,7 +90,7 @@
 11-9-title: Flächennutzungsintensität
 11-10-title: Lärmkartierung / Anzahl der lärmbelasteten Flächen (Fortschritt / Rückschritt)
 11-11-title: Mietpreise (ohne geförderten Wohnungsbau)
-11-12-title: Lärmkartierung / Anzahl der lärmbelasteten Flächen (Fortschritt / Rückschritt)
+11-12-title: Naherholungsflächen (mit Wald)
 11-13-title: Mietpreise (ohne geförderten Wohnungsbau)
 11-14-title: Naherholungsflächen (mit Wald)
 11-15-title: Öffentliche Grünflächen
