--- a/meta/11-13.md
+++ b/meta/11-13.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-13-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Durchschnittliche Nettokaltmiete in € je m²
+computation_units: km² je 1.000 EW 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Größe der öffentlichen Grünflächen in km² / 1.000 EW ohne Straßenbegleitgrün und Grünflächen der öffentlichen Einrichtungen wie Schulen oder Kindergärten
 
-SOURCE_TYPE: <a href="https://ivd.net/">IVD, neu abgeschlossene Mietverträge</a>  # data source  
+SOURCE_TYPE: Vorhandene öffentliche Grünflächen entsprechend der Flächenstatistik des Gartenamtes Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Mietpreise ohne geförderten Wohnungsbau. Angegeben wird die durchschnittliche Nettokaltmiete in € je m². <br>
+Unter dem Begriff kommunale Grünflächen versteht man alle öffentlichen Freiflächen, die gärtnerisch gepflegt werden und die die Stadt der Allgemeinheit zugänglich gemacht hat. Unter diese Kategorie fallen nicht nur die großen Parkanlagen wie das Glacis, der Luitpoldpark, der Fort Haslang Park oder der Park Mailinger Aue, sondern auch die vielen kleineren Grünzüge wie der Güßgraben in Etting oder der Grünzug Märzenbecherstraße im Stadtteil Ringsee. Mehr Infos auf der Webseite des <a href="https://www.ingolstadt.de/Rathaus/Stadtgarten/Gr%C3%BCnplanung-Pflege/">Gartenamts Ingolstadt</a>. Von 2023 auf 2022 sank der Wert leicht aufgrund der zunehmenden Bevölkerungszahl bei gleichbleibender Größe der Grünflächen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
+N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle<br>
 <br>
-<b>BNK-Indikator</b>
+<b>Ingolstadtspezifischer Indikator</b>
