--- a/meta/11-14.md
+++ b/meta/11-14.md
@@ -7,20 +7,20 @@ indicator_sort_order: 11-14-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Hektar (ha)
+computation_units: Nahversorgung mit Haltestellen 
 data_start_values:  # initialize the field to be shown  
- - field: Naherholungsflächen 
-   value: ha / 1000 EW 
- - field: Naherholungsflächen 
-   value: ha gesamt
+ - field: Region 
+   value: Ingolstadt 
+ - field: Region 
+   value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Hektar
+computation_definitions: 
 
-SOURCE_TYPE: Referat für Stadtentwicklung und Baurecht der Stadt Ingolstadt  # data source  
+SOURCE_TYPE: Ingolstädter Verkehrsgesellschaft  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator weist die Naherholungsflächen mit Wald in Hektar (ha) je 1000 Einwohner/-innen aus sowie die Naherholungsflächen gesamt in Hektar. Aufgrund des Wachstums der Bevölkerung in den letzten Jahren bei nahezu gleichbleibender Naherholungsfläche ist ein Rückgang der Fläche im Verhältnis zur Einwohnerzahl zu verzeichnen. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
+Entfernung im innerstädtischen Bereich Luftlinie jeweils 300 Meter und in den Vorortern maximal 600 Meter Luftlinie. Entspricht den ÖPNV Richtlinien. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.7: Naherholung mit ökologischen Aspekten vereinen<br>
+N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
+<b>BNK-Indikator</b>
