--- a/meta/11-14.md
+++ b/meta/11-14.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-14-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Nahversorgung mit Haltestellen 
+computation_units: Anzahl Haltestellen 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Nahversorgung mit Haltestellen im Stadtgebiet
 
-SOURCE_TYPE: Ingolstädter Verkehrsgesellschaft  # data source  
+SOURCE_TYPE: VGI - Verkehrsverbund Großraum Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
