--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -92,7 +92,7 @@
 11-11-title: Mietpreise (ohne geförderten Wohnungsbau)
 11-12-title: Naherholungsflächen (mit Wald)
 11-13-title: Öffentliche Grünflächen
-11-14-title: Naherholungsflächen (mit Wald)
+11-14-title: ÖPNV (Nahversorgung mit Haltestellen)
 11-15-title: Öffentliche Grünflächen
 11-16-title: ÖPNV (Nahversorgung mit Haltestellen)
 11-17-title: PKW-Dichte
