--- a/meta/11-15.md
+++ b/meta/11-15.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-15-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: km² je 1.000 EW 
+computation_units: Anzahl der PKW je 1.000 EW
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der PKW je 1.000 Einwohner/-innen
 
-SOURCE_TYPE: Vorhandene öffentliche Grünflächen entsprechend der Flächenstatistik des Gartenamtes Ingolstadt  # data source  
+SOURCE_TYPE: <a href="https://www.kba.de/DE/Statistik/Fahrzeuge/Bestand/ZulassungsbezirkeGemeinden/zulassungsbezirke_node.html?yearFilter=2024">Kraftfahrtbundesamt</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,10 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Öffentliche Grünflächen in der Einheit km² je 1.000 EW in allen Stadtvierteln der Stadt Ingolstadt. Unter dem Begriff kommunale Grünflächen versteht man alle öffentlichen Freiflächen, die gärtnerisch gepflegt werden und die die Stadt der Allgemeinheit zugänglich gemacht hat. Unter diese Kategorie fallen nicht nur die großen Parkanlagen wie das Glacis, der Luitpoldpark, der Fort Haslang Park oder der Park Mailinger Aue, sondern auch die vielen kleineren Grünzüge wie der Güßgraben in Etting oder der Grünzug Märzenbecherstraße im Stadtteil Ringsee. Mehr Infos auf der Webseite des <a href="https://www.ingolstadt.de/Rathaus/Stadtgarten/Gr%C3%BCnplanung-Pflege/">Gartenamts Ingolstadt</a>.<br>
+Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatte eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle<br>
+N4.2: Reduktion des motorisierten Individualverkehrs<br>
 <br>
-<b>Ingolstadtspezifischer Indikator</b>
-
+<b>BNK-Indikator</b>
