--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -93,7 +93,7 @@
 11-12-title: Naherholungsflächen (mit Wald)
 11-13-title: Öffentliche Grünflächen
 11-14-title: ÖPNV (Nahversorgung mit Haltestellen)
-11-15-title: Öffentliche Grünflächen
+11-15-title: PKW-Dichte
 11-16-title: ÖPNV (Nahversorgung mit Haltestellen)
 11-17-title: PKW-Dichte
 11-18-title: Wohnfläche je Einwohner/-in
