--- a/meta/11-17.md
+++ b/meta/11-17.md
@@ -9,20 +9,24 @@ indicator_sort_order: 11-17-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der PKW je 1.000 EW
+computation_units: Prozent
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Modal Split 
+   value: zu Fuß 
+ - field: Modal Split 
+   value: Fahrrad
+ - field: Modal Split 
+   value: MIV 
+ - field: Modal Split 
+   value: ÖV
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der PKW je 1.000 EW
+computation_definitions: Modal Split im Stadtgebiet nach den Kategorien "zu Fuß", "Fahrrad", "MIV (Motorisierter Individualverkehr)" und "ÖV (Öffentlicher Verkehr)"
 
-SOURCE_TYPE: <a href="https://www.kba.de/DE/Statistik/Fahrzeuge/Bestand/ZulassungsbezirkeGemeinden/zulassungsbezirke_node.html?yearFilter=2024">Kraftfahrtbundesamt</a>  # data source  
-source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verkehr/Verkehrsmanagement/Verkehrsentwicklungsplan/">Amt für Verkehrsmanagement und Geoinformation</a>  # data source  
+source_earliest_available_1: 2001
+source_periodicity_1: alle 5 - 10 Jahre
 
 language: de   
 published: true 
@@ -31,9 +35,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatte eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.<br>
+Der Modal Split gibt die prozentualen Anteile der einzelnen Verkehrsmittel an der gesamten ⁠Verkehrsleistung⁠ an und geben Aufschluss über die Verkehrsmittelnutzung. 2001 und 2016 wurden hierzu Haushalsbefragungen von der Stadt Ingolstadt durchgeführt, um annährend das Nutzungsverhalten zu bestimmen. Hierbei teilt sich die Befragung in die Bereiche "zu Fuß", "Fahrrad", "MIV (Motorisierter Individualverkehr)" und "ÖV (Öffentlicher Verkehr)" auf. Hierbei wurden u.a. Angaben über Verkehrsmittelverfügbarkeit und -nutzung, Wohnlagen, soziodemografische Merkmale, Häufigkeit und Zweck der Nutzung, Verkehrsleistung gemacht. 2023 erfolgte eine weitere Befragung. Die Ergebnisse hierzu sind aber noch ausstehend. Ein Ziel des Verkehrsentwicklungsplans 2025 aus dem Jahr 2016 war es u.a. den Anteil des Fahrradverkehrs auf 25 Prozent zu erhöhen.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.2: Reduktion des motorisierten Individualverkehrs<br>
+N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
 <br>
 <b>BNK-Indikator</b>
