--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -95,7 +95,7 @@
 11-14-title: ÖPNV (Nahversorgung mit Haltestellen)
 11-15-title: PKW-Dichte
 11-16-title: Wohnfläche je Einwohner/-in
-11-17-title: PKW-Dichte
+11-17-title: Modal Split
 11-18-title: Wohnfläche je Einwohner/-in
 11-19-title: Zahl der Verkehrsunfälle mit Personenschaden
 
