--- a/meta/11-18.md
+++ b/meta/11-18.md
@@ -9,51 +9,30 @@ indicator_sort_order: 11-18-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: m²
+computation_units:
 data_start_values:  # initialize the field to be shown  
  - field: Bezirk 
    value: I Mitte 
  - field: Bezirk 
    value: II Nordwest
- - field: Bezirk 
-   value: III Nordost 
- - field: Bezirk 
-   value: IV Südost
- - field: Bezirk 
-   value: V Südwest 
- - field: Bezirk 
-   value: VI West
- - field: Bezirk 
-   value: VII Etting
- - field: Bezirk 
-   value: VIII Oberhaunstadt 
- - field: Bezirk 
-   value: IX Mailing
- - field: Bezirk 
-   value: X Süd 
- - field: Bezirk 
-   value: XI Friedrichshofen-Hollerstauden
- - field: Bezirk 
-   value: XII Münchener Straße
- - field: Bezirk 
-   value: Gesamt 
+
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Wohnfläche in m² je EW nach Hauptwohnsitz
+computation_definitions: Anzahl an kommunalen oder durch die Kommune unterstützte Treffpunkte für Senior/-innen, Jugendliche, Personen mit Einschränkungen jeglicher Art
 
-SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=31231-003z&bypass=true&levelindex=1&levelid=1680780794247#abreadcrumb"> Bayerisches Landesamt für Statistik</a>  # data source  
-source_earliest_available_1: 2019
+SOURCE_TYPE: Referat für Soziales, Jugend und Gesundheit  # data source  
+source_earliest_available_1: 2023
 source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die durchschnittliche Wohnfläche pro Person hat in den vergangenenen Jahren immer weiter zugenommen – von 34 m² im Jahr 1990 auf gut 44 m² im Jahr 2023. Allerdings ist dieser Wert in den letzten Jahren langsamer gestiegen. In kleineren Haushalten erhöht sich in der Regel die durchschnittliche Wohnfläche pro Person. Dieser Trend ergibt sich u.a. aus der steigenden Zahl von Einpersonenhaushalten, aber z.B. auch dann, wenn erwachsene Kinder aus dem Haushalt der Eltern ausziehen. Insbesondere in den einzelnen Stadtvierteln ist ein starker Unterschied von bis zu 20 m² / EW festzustellen. Dieser resultiert oftmals daraus, dass in wohlhabenderen Stadtvierteln vermehrt Einfamilienhäuser mit mehr Fläche zur Verfügung stehen.<br>
+Der Indikator zeigt die Anzahl an kommunalen oder durch die Kommune unterstützte Treffpunkte für Senior/-innen, Jugendliche, Personen mit Einschränkungen jeglicher Art.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächenbedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
