--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -97,7 +97,7 @@
 11-16-title: Wohnfläche je Einwohner/-in
 11-17-title: Modal Split
 11-18-title: Generationengerechte Treffpunkte im Stadtgebiet 
-11-19-title: Zahl der Verkehrsunfälle mit Personenschaden
+11-19-title: Planung und Neubau von Kleingartenanlagen
 
 12-1-title: Abfallmenge (private Haushalte)
 12-2-title: Anzahl nachhaltige Kitas (zertifiziert, z.B. Fairtrade)
