--- a/meta/12-2.md
+++ b/meta/12-2.md
@@ -16,7 +16,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Kitas in Ingolstadt und Anzahl mit Zertifizierungen (z.B. Eine Welt)
 
 SOURCE_TYPE: Amt für Kinderbetreuung und vorschulische Bildung  # data source  
 source_earliest_available_1: 2023
