--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -40,7 +40,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Abfallmenge der privaten Haushalte in kg je Einwohner/-in unterteilt in die verschiedenen Abfallarten (Restmüll, Biomüll, Papier, Sperrmüll, Altholz, Metallschrott, Elektrogeräte, Textilien, Grüngut, Bauschutt, gelber Sacke, Flaschenglas, gesamt)
 
 SOURCE_TYPE: Abfallmengen der <a href="https://www.in-kb.de/">Ingolstädter Kommunalbetriebe</a>, Einwohnerzahlen vom Bayerischen Landesamt für Statistik zum 30.06. d.j.J.  # data source  
 source_earliest_available_1: 2013
