--- a/meta/12-3.md
+++ b/meta/12-3.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Schulen in Ingolstadt und Anzahl mit Zertifizierungen (Fairtrade, Umweltschule etc.) aufgeschlüsselt nach Zertifizierung
 
 SOURCE_TYPE: <a href="https://www.fairtrade-schools.de/kampagne/fairtrade-schools-karte">Fairtrade-Schools Kampagne</a>, <a href="https://www.umweltbildung.bayern.de/aktiv/umweltschulen/index.htm">Umweltschulen in Bayern</a> # data source  
 source_earliest_available_1: 2019
