--- a/meta/12-4.md
+++ b/meta/12-4.md
@@ -7,9 +7,9 @@ indicator_sort_order: 12-04-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Zertifizierungen
+computation_units: Anzahl der Re-Zertifizierungen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Re-Zertifizierungen zur Fairtrade-Town
 
 SOURCE_TYPE: <a href="www.ingolstadt.de/fairtrade">Fairtrade-Town-Ingolstadt</a>  # data source  
 source_earliest_available_1: 2014
@@ -31,7 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Stadt Ingolstadt ist seit 2014 als Fairtrade-Town zertifiziert. Seitdem hat die Stadt 4 weitere Zertifizierungsprozesse durchlaufen. Eine Zertifizierung wird alle 2 Jahre durchgeführt. <br>
+Die Stadt Ingolstadt ist seit 2014 als Fairtrade-Town zertifiziert. Seitdem hat die Stadt 5 Re-Zertifizierungsprozesse durchlaufen. Eine Zertifizierung wird alle 2 Jahre durchgeführt. <br>
+<br>
+Um Fairtrade-Stadt zu werden, müssen fünf Kriterien erfüllt sein, alle sind in Ingolstadt seit mehreren Jahren verwirklicht: Der Stadtratsbeschluss, die Einrichtung einer Steuerungsgruppe, Einzelhandel und Gastronomie sollen Produkte aus fairem Handel anbieten, öffentliche Einrichtungen ihre Teilnahme zusichern. Dass die Medien über all diese Aktivitäten berichten, ist das fünfte zu erfüllende Kriterium. All diese Kriterien werden erfüllt. Mehr Informationen unter <a href="www.ingolstadt.de/fairtrade">Fairtrade-Town-Ingolstadt</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N1.7: Unterstützung der Vermarktungsstrukturen regionaler, fairer und ökologischer Produkte und somit des regionalen Konsums<br>
