--- a/meta/12-4.md
+++ b/meta/12-4.md
@@ -9,7 +9,7 @@ indicator_sort_order: 12-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Re-Zertifizierungen
+computation_units: Anzahl der Zertifizierungen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anzahl der Re-Zertifizierungen zur Fairtrade-Town
+computation_definitions: Anzahl der Zertifizierungen zur Fairtrade-Town
 
 SOURCE_TYPE: <a href="www.ingolstadt.de/fairtrade">Fairtrade-Town-Ingolstadt</a>  # data source  
 source_earliest_available_1: 2014
