--- a/meta/13-1.md
+++ b/meta/13-1.md
@@ -6,10 +6,10 @@ graph_title: global_indicators.13-1-title
 indicator_sort_order: 13-01-01
  
 # 2. Grafikart auswaehlen: 
-data_non_statistical: true  # set to 'false' for chart/graph visualization 
+data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Klimaanalyse-Karte 
+computation_units: Anzahl Einwohner/-innen 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,10 +18,10 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl betroffener Bürger/-innen in der Altstadt der Stadt Ingolstadt (besonders belastetes Gebiet aus Klimaanalysekarte)
 
 SOURCE_TYPE: <a href="https://stadtplan.ingolstadt.de/#ll=48.762982,11.390595&z=13&m=custom379&mf=s100!o100&cat=39338,39357">Klimaanalyse-Karte Ingolstadt</a>  # data source  
-source_earliest_available_1: 2022
+source_earliest_available_1: 2019
 source_periodicity_1: 
 
 language: de   
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-In Städten wirkt sich besonders die durch den Klimawandel bedingte zunehmende Hitzebelastung negativ auf die menschliche Gesundheit aus. Nach den Prognosen des bayerischen Landesamts für Umweltschutz wird die Zahl der gesundheitsbelastenden Hitzetage (Tmax > 30° C) und Tropennächte (Tmin > 20°C) deutlich zunehmen. Um in der Stadtentwicklung darauf angemessen reagieren und Vorsorgemaßnahmen treffen zu können, sind umfangreiche und hochaufgelöste Grundlageninformationen unverzichtbar. Geeignete Instrumente zur Identifizierung der relevanten „Klimatope“ (Flächen mit einheitlichen klimatischen Gegebenheiten) und deren planerischen Bearbeitung ist die <a href="https://stadtplan.ingolstadt.de/#ll=48.762982,11.390595&z=13&m=custom379&mf=s100!o100&cat=39338,39357">Klimaanalysekarte</a>. <br>
+In Städten wirkt sich besonders die durch den Klimawandel bedingte zunehmende Hitzebelastung negativ auf die menschliche Gesundheit aus. Nach den Prognosen des bayerischen Landesamts für Umweltschutz wird die Zahl der gesundheitsbelastenden Hitzetage (Tmax > 30° C) und Tropennächte (Tmin > 20°C) deutlich zunehmen. Um in der Stadtentwicklung darauf angemessen reagieren und Vorsorgemaßnahmen treffen zu können, sind umfangreiche und hochaufgelöste Grundlageninformationen unverzichtbar. Geeignete Instrumente zur Identifizierung der relevanten „Klimatope“ (Flächen mit einheitlichen klimatischen Gegebenheiten) und deren planerischen Bearbeitung ist die <a href="https://stadtplan.ingolstadt.de/#ll=48.762982,11.390595&z=13&m=custom379&mf=s100!o100&cat=39338,39357">Klimaanalysekarte</a>. Aus dieser geht hervor, dass insbesondere in der Ingolstadtädter Altstadt eine starke Belastung durch Hitze existiert. Die gestiegene Zahl der betroffenen Bürger/-innen resultiert aus der steigenden Einwohnerzahl in der Altstadt. Weitere betroffene Flächen sind vor allem die Gewerbegebiete der Stadt, sodass vor allem die dortigen Arbeiter/-innen davon betroffen sind. Dies wird hier aber nicht weiter aufgeführt. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K3.2: Entgegenwirken von Hitzeinseln (Vermeiden durch Ausbau der grünen Infrastruktur, Berücksichtigung von Kaltluftschneisen zur Belüftung der Siedlungsbereiche)<br>
