--- a/meta/13-3.md
+++ b/meta/13-3.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Hitzetage pro Jahr
 
 SOURCE_TYPE: Deutscher Wetterdienst  # data source  
 source_earliest_available_1: 2019
