--- a/meta/14-1.md
+++ b/meta/14-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 14-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Fließwasserqualität in Prozent
+computation_units: Prozent
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,11 +18,11 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Ökologisches Potenzial von x% der Fließgewässer in der Kommune ist mind. "gut" bewertet
 
 SOURCE_TYPE: <a href="https://www.wwa-in.bayern.de/fluesse_seen/umsetzungskonzepte_wrrl/index.htm">Wasserwirtschaftsamt Ingolstadt</a>  # data source  
 source_earliest_available_1: 2019
-source_periodicity_1: Jährlich
+source_periodicity_1: alle 6 Jahre
 
 language: de   
 published: true 
@@ -32,7 +32,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Im Rahmen der Umsetzung der EU-WRRL-Richtlinie wird im Bereich der Stadt Ingolstadt für folgende Gewässer der Zustand bzw. das ökologische Potential ermittelt:
-Donau, Schutter, Sandrach, Mailinger Bach. Das gute ökologische Potential hat bisher nur die Donau erreicht – daher beträgt die Anzahl der Fließgewässer, die mindestens mit "gut" beurteilt wurden 25%. Die Bewirtschaftungspläne werden alle 6 Jahre fortgeschrieben, d.h. dass sich von 2019 bis 2021 keine Veränderungen ergeben haben. <br>
+Donau, Schutter, Sandrach, Mailinger Bach. Das gute ökologische Potential hat bisher nur die Donau erreicht – daher beträgt die Anzahl der Fließgewässer, die mindestens mit "gut" beurteilt wurden 25%. Die Bewirtschaftungspläne werden alle 6 Jahre fortgeschrieben. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
