--- a/meta/14-2.md
+++ b/meta/14-2.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Qualitativer Zustand der Badegewässer anhand der mikrobiologischen Parameter Escherichia coli und Intestinale Enterokokken über den Zeitraum der letzten 4 Jahre in den Kategorien “Ausgezeichnet” (3), “Gut” (2), “Ausreichend” (1), “Mangelhaft” (0)
 
 SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/index.php?La=1&object=tx,465.2194.1&kat=&kuo=2&sub=0&NavID=2789.411">Baggersee</a> und <a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/index.php?La=1&object=tx,465.2193.1&sub=0">Auwaldsee</a>  # data source  
 source_earliest_available_1: 2018
