--- a/meta/15-1.md
+++ b/meta/15-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 15-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anteil ökologisch bewirtschafteter Fläche
+computation_units: Prozent
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Anteil der ökologisch bewirtschafteten Fläche an der landwirtschaftlich genutzten Fläche
 
 SOURCE_TYPE: Auswertung der Mehrfachanträge durch das Amt für Ernährung, Landwirtschaft und Forsten Ingolstadt-Pfaffenhofen  # data source  
 source_earliest_available_1: 2019
