--- a/meta/15-2.md
+++ b/meta/15-2.md
@@ -9,7 +9,7 @@ indicator_sort_order: 15-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -32,6 +32,6 @@ reporting_status: inprogress
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+K2.4: Schutz und Begünstigung der Biodiversität<br>
 <br>
 <b>BNK-Indikator</b>
