--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -114,8 +114,8 @@
 14-2-title: Gewässerqualität
 
 15-1-title: Anteil der ökologisch bewirtschafteten Fläche an der landwirtschaftlich genutzten Fläche
-15-2-title: Anteil versiegelter Flächen
-15-3-title: Monitoring der Artenvielfalt (Anzahl geschützter Arten)
+15-2-title: Vielfalt und Qualität von Biotoptypen
+15-3-title: Vertrags-Naturschutzflächen
 15-4-title: Renaturierte Flächen in ha
 15-5-title: Waldflächenbilanz
 15-6-title: Vertrags-Naturschutzflächen
