--- a/meta/15-3.md
+++ b/meta/15-3.md
@@ -7,33 +7,49 @@ indicator_sort_order: 15-03-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl geschützter Arten
+computation_units: Hektar
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Flächen 
+   value: Vertragsnaturschutzprogramm 
+ - field: Flächen 
+   value: Grünlandfläche Gesamt 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+national_geographical_coverage: Ingolstadt
+computation_definitions: Anzahl der Einzelflächen des Vertrags-Naturschutzprogramms und der Fläche insgesamt sowie die Gesamtfläche von Grünflächen in ha
 
-SOURCE_TYPE: Umweltamt Ingolstadt  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Stadt Ingolstadt, Umweltamt  # data source  
+source_earliest_available_1: 2015
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Derzeit nur ältere Daten ohne digitale Abrufbarkeit von Zahlen vorliegend, Aktualisierung durch biol. Kartierung (LfU) geplant. Auswertung 2023 abgeschlossen.<br>
+Anzahl der Einzelflächen des Vertrags-Naturschutzprogramms und der Fläche insgesamt sowie die Gesamtfläche von Grünflächen in ha.<br>
+<br>
+Das Vertragsnaturschutzprogramm (VNP) honoriert freiwillige Leistungen von Landwirten bei der Bewirtschaftung ihrer Flächen, beispielsweise die spätere Mahd von Wiesen zum Schutz bodenbrütender Vogelarten 
+oder die Schafbeweidung zum Erhalt von blütenbunten Magerrasen. In diesem Jahr kamen allein bei den Spätmahdflächen mehr als 6.500 Hektar blühende und insektenreiche Wiesen hinzu. 
+In Bayern sollen die Natur-Flächen noch einmal kräftig zulegen: Die Vertragsnaturschutzflächen sollen dazu beitragen, den Biotopverbund im Offenland bis zum Jahr 2030 auf 15 Prozent der Fläche auszuweiten.<br>
+<br>
+Abgänge von Vertragsnaturschutzflächen (VNP) zwischen den Jahren sind darin begründet, dass seitens des Umweltamts der Stadt Ingolstadt eine Verlängerung einiger Verträge nicht befürwortet worden ist. 
+Die Zunahme von Jahr zu Jahr erklärt sich damit, dass z.T. Flächennutzer neue Flächen angeboten haben, zum großen Teil aber eine gezielte Akquisition des Umweltamts erfolgt ist, um wertvolle Flächen 
+(u.a. im Wiesenbrütergebiet) durch spätere Mahd z.B. für bodenbrütende Vogelarten zu sichern.<br> 
+<br>
+Auf allen Förderflächen ist Düngung und Pflanzenschutz ausgeschlossen und bis auf wenige Ausnahmen erfolgt die Mahd frühestens am 15.6. Damit wird auch die Vorgabe aus Art 3 BayNatSchG (4) 6.) erfüllt 
+(erste Mahd nicht vor dem 15.6.).<br>
+<br>
+Mit dem Vorliegen der ersten Ergebnisse der Stadtbiotopkartierung 2022 wurden gezielt Bewirtschafter für den Abschluss von VNP-Maßnahmen auf wertvollen Flächen angesprochen, um diese zu sichern und weiterzuentwickeln, 
+damit erklärt sich die starke Zunahme 2023 um fast 50 Flächen. Der Anteil an VNP-Flächen entspricht damit knapp 30 % und erfüllt die gesetzliche Vorgabe von 10 %.<br>
+<br>
+Die Fördersumme 2023 lag bei insgesamt 126.862 €.<br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.5: Schutz und Begünstigung der Biodiversität<br>
+K2.4: Schutz und Begünstigung der Biodiversität<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
