--- a/meta/15-4.md
+++ b/meta/15-4.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: Hektar
+computation_definitions: Angelegte Ausgleichsflächen in Hektar durch das Gartenamt und das Forstamt der Stadt Ingolstadt
 
 SOURCE_TYPE: <a href="https://www.ingolstadt.de/Service/Formulare-Adressen/Adressen/Forstamt.php?object=tx,2789.1.1&ModID=9&FID=465.102.1&NavID=2789.804&La=1">Stadt Ingolstadt - Forstamt</a>, <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/Adressen/Gartenamt.php?object=tx,2789.1.1&ModID=9&FID=465.106.1&NavID=2789.173">Stadt Ingolstadt - Gartenamt</a>  # data source  
 source_earliest_available_1: 2019
