--- a/meta/16-1.md
+++ b/meta/16-1.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Anzahl der Bürger/-innen mit einer Ehrenamtskarte
 
 SOURCE_TYPE: Freiwilligenzentrum  des Bürgerhaus Ingolstadt # data source  
 source_earliest_available_1: 2019
