--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -34,7 +34,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl und Art der informellen Bürger/-innenbeteiligungsverfahren
 
 SOURCE_TYPE: <a href="https://www.ingolstadt.de/Home/B%C3%BCrgerbeteiligung-in-Ingolstadt.php?object=tx,2789.5&ModID=7&FID=2789.24.1&NavID=2789.411">Bürgerbeteiligung Ingolstadt</a>   # data source  
 source_earliest_available_1: 2019
