--- a/meta/16-6.md
+++ b/meta/16-6.md
@@ -9,7 +9,7 @@ indicator_sort_order: 16-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Straftaten je 1.000 EW
+computation_units: Anzahl Straftaten
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Straftaten (polizeilich gemeldet) insgesamt
 
 SOURCE_TYPE: <a href="https://www.polizei.bayern.de/kriminalitaet/statistik/index.html">Polzei Oberbayern Nord</a>  # data source  
 source_earliest_available_1: 2019
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Polizeilich gemeldete Straftaten je 1.000 Einwohner/-innen in Ingolstadt. In der Polizeilichen Kriminalstatistik werden die von den bayerischen Polizeidienststellen bearbeiteten rechtswidrigen (Straf-)Taten einschließlich der mit Strafe bedrohten Versuche sowie die ermittelten Tatverdächtigen erfasst, sofern die Taten im Freistaat Bayern begangen wurden. Einbezogen sind auch die von den Zollbehörden gemeldeten Rauschgiftdelikte. Nicht enthalten sind (echte) Staatsschutzdelikte und Verkehrsdelikte. Die Erfassung erfolgt nach genau bestimmten "Regeln für die Fallerfassung" und orientiert sich an einem unter teils strafrechtlichen, teils kriminologischen Aspekten aufgebauten "Straftatenkatalog", der seit 1971 mehrfach ergänzt und erweitert worden ist. <br>
+In der Polizeilichen Kriminalstatistik werden die von den bayerischen Polizeidienststellen bearbeiteten rechtswidrigen (Straf-)Taten einschließlich der mit Strafe bedrohten Versuche sowie die ermittelten Tatverdächtigen erfasst, sofern die Taten im Freistaat Bayern begangen wurden. Einbezogen sind auch die von den Zollbehörden gemeldeten Rauschgiftdelikte. Nicht enthalten sind (echte) Staatsschutzdelikte und Verkehrsdelikte. Die Erfassung erfolgt nach genau bestimmten "Regeln für die Fallerfassung" und orientiert sich an einem unter teils strafrechtlichen, teils kriminologischen Aspekten aufgebauten "Straftatenkatalog", der seit 1971 mehrfach ergänzt und erweitert worden ist. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.8: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung<br>
+V1.2: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
