--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -125,6 +125,7 @@
 16-4-title: Liquiditätskredite
 16-5-title: Steuereinnahmen
 16-6-title: Straftaten (polizeilich gemeldet)
+16-7-title: Beteiligung an Kommunalwahlen
 
 17-1-title: Anzahl Partnerschaften mit Kommunen aus dem Globalen Süden
 17-2-title: Anzahl Projekte mit den Partnerstädten
