--- a/meta/17-2.md
+++ b/meta/17-2.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl Projekte mit den Partnerstädten
 
 SOURCE_TYPE: Kulturreferat Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Manisa/Türkei, Moskau Zentralbezirk/Russland (derzeit ruhend), Murska Sobota/Slowenien. Zudem Projektpartnerschaft Legmoin/Burkina Faso und Patenschaften für Heimatverbände; Auswirkungen der Pandemie auf Durchführung von Veranstaltungen ab 2020.<br>
+Der Indikator zeigt die Anzahl der Projekte mit den Partnerstädten der Stadt Ingolstadt an. Während der Corona-Pandemie sank die Zahl der Projekte. Seit 2022 ist die Zahl wieder steigend.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V2.7: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
+V2.2: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
