--- a/meta/1-7.md
+++ b/meta/1-7.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Der Indikator beschreibt die Anzahl der Alleinerziehenden in Ingolstadt und Alleinerziehende, die Leistungen nach SGB II beziehen. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
-V1.2: Unterstützung von Menschen in besonderen Lebenslagen<br>
+V1.4: Armutsbekämpfung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
