--- a/meta/1-8.md
+++ b/meta/1-8.md
@@ -36,5 +36,6 @@ Der Indikator beschreibt die Arbeitslosenquote bezogen auf alle zivilen Erwerbsp
 Dieser Wert sank in den darauffolgenden Jahren wieder.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
+V1.4: Armutsbekämpfung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
