--- a/meta/1-9.md
+++ b/meta/1-9.md
@@ -34,5 +34,5 @@ Das Wohngeld hilft damit Bürger/-innen mit geringem Einkommen bei ihren Wohnkos
 Seit 2019 ist die Zahl der Wohngeldempfänger in Ingolstadt gestiegen. Der starke Anstieg zwischen 2022 und 2023 erklärt sich aufgrund der Erweiterung des Kreis der Wohngeldberechtigten seit 2023.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
-<br>
+V1.4: Armutsbekämpfung<br>
 <b>Ingolstadtspezifischer Indikator</b>
