--- a/meta/1-9.md
+++ b/meta/1-9.md
@@ -11,7 +11,10 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl Wohngeldempfänger
 data_start_values:  # initialize the field to be shown  
-
+ - field:  
+   value: 
+ - field: 
+   value:  
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
