--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -14,7 +14,7 @@ computation_units: t, %
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anteil der geretteten Lebensmittel durch Foodsharing und Tafel in Relation zu Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist
 
 SOURCE_TYPE: Gerettete Lebensmittel von <a href="https://foodsharing.de/fairteiler?bid=271">Foodsharing Ingolstadt</a> und <a href="https://www.tafel-in.de/">Tafel Ingolstadt e.V.</a>, Abfallmengen von den <a href="https://www.in-kb.de/">Ingolstädter Kommunalbetriebe</a>   # data source  
 source_earliest_available_1: 2022
