--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -19,7 +19,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der Kurzzeit- und Langzeitpflegeplätze sowie ambulante Pflegeangebote
 
 SOURCE_TYPE: "Stadt Ingolstadt Bürgerhaus, Stand: Juni 2024"  # data source  
 source_earliest_available_1: 2022
