--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -20,7 +20,7 @@ computation_definitions:
 
 SOURCE_TYPE: Gesundheitsamt Ingolstadt  # data source  
 source_earliest_available_1: 2022
-source_periodicity_1: 
+source_periodicity_1: Anzahl und Art der Präventionsangebote zur psychischen und physischen Gesundheit (universelle Prävention, selektive Prävention, indizierte Prävention, Verhältnisprävention)
 
 language: de   
 published: true 
