--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -18,11 +18,11 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Versorgung durch Allgemeinmediziner/-innen je 100.000 EW
 
 SOURCE_TYPE: <a href="https://www.kvb.de/index.php">Kassenärztliche Vereinigung Bayerns</a>  # data source  
 source_earliest_available_1: 2021
-source_periodicity_1: 
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
