--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -16,11 +16,11 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl und Art der Präventionsangebote zur psychischen und physischen Gesundheit (universelle Prävention, selektive Prävention, indizierte Prävention, Verhältnisprävention)
 
 SOURCE_TYPE: Gesundheitsamt Ingolstadt  # data source  
 source_earliest_available_1: 2022
-source_periodicity_1: Anzahl und Art der Präventionsangebote zur psychischen und physischen Gesundheit (universelle Prävention, selektive Prävention, indizierte Prävention, Verhältnisprävention)
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
