--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -32,7 +32,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Offene Stellen und Ausbildungen von medizinischem Fachpersonal 
 
 SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=15024&r_f=by_Ingolstadt&topic_f=gemeldete-arbeitsstellen">Bundesagentur für Arbeit - gemeldete Arbeitsstellen</a> und <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?r_f=by_Ingolstadt&topic_f=ausb-ausbildungsstellenmarkt-mit-zkt">Bundesagentur für Arbeit - Bewerber und Berufsausbildungsstellen</a>"  # data source  
 source_earliest_available_1: 2019
