--- a/meta/3-7.md
+++ b/meta/3-7.md
@@ -37,6 +37,6 @@ reporting_status: complete
 Anzahl der Todesfälle von Personen unter 70 Jahren. Zwischen 2020 und 2022 ist eine erhöhte vorzeitige Sterblichkeit festzustellen, die  u.a. auf die Corona-Pandemie zurückzuführen ist. <br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N2.5: Ermöglichung eines guten Lebens im Alter<br>
+N2.5: Ermöglichung einer guten Versorgung (generationenspezifische Angebote) <br>
 <br>
 <b>BNK-Indikator</b>
