--- a/meta/3-8.md
+++ b/meta/3-8.md
@@ -31,9 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Krankenhausbetten je 100.000 Einwohner/-innen. <br>
+Anzahl der Krankenhausbetten je 100.000 Einwohner/-innen. Die Zahl der Betten pro 100.000 Einwohner/-innen ist sinkend aufgrund der gleich bleibenden Zahl an Betten und einer steigenden Einwohnerzahl.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur<br>
 <br>
 <b>BNK-Indikator</b>
