--- a/meta/3-4.md
+++ b/meta/3-4.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Absolute Anzahl der zugelassenen, angestellten und ermächtigten Ärzt/-innen zur vertragsärztlichen Versorgung, unabhängig von ihrem Tätigkeitsumfang oder ihrer Berücksichtigung in der Bedarfsplanung.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
