--- a/meta/4-2.md
+++ b/meta/4-2.md
@@ -36,6 +36,6 @@ Stand: 13.06.2024
 Die Gesamtzahl jeden Jahres speist sich aus allen Angeboten des Bildungsprogramms der Stadt Ingolstadt, den berufsbegleitenden Weiterbildungen und -qualifizierungen, den Fachspezifischen Fortbildungen, den E-Learning-Angeboten, Teamseminaren und Führungskräfteworkshops.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-W3.2: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
+I1.3: Förderung von lebenslangem Lernen in der Stadtverwaltung <br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
