--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anteil der Schulabbrecher ohne Hauptschulabschluss
 
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=21111-107s&bypass=true&levelindex=1&levelid=1665381899858#abreadcrumb">LfStat</a>, zuletzt abgerufen über das <a href="https://sdg-portal.de/de/sdg-indikatoren/ingolstadt?goals[0]=1&goals[1]=2&goals[2]=3&goals[3]=4&goals[4]=5&goals[5]=6&goals[6]=7&goals[7]=8&goals[8]=9&goals[9]=10&goals[10]=11&goals[11]=12&goals[12]=13&goals[13]=14&goals[14]=15&goals[15]=16&goals[16]=17&showAverage=1&longTermComparison=1">SDG-Portal der Bertelsmann-Stiftung</a> am 09.07.2024 
 
@@ -36,6 +36,6 @@ reporting_status: complete
 Prozentualer Anteil Schulabbrechenden ohne Hauptschulabschluss. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
 <br>
 <b>BNK-Indikator</b>
