--- a/meta/5-1.md
+++ b/meta/5-1.md
@@ -46,6 +46,6 @@ Die Anzahl der Angebote für Vereinbarkeit von Beruf und Familie für städtisch
 <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+I1.5: Sicherstellung eines fairen Lohns und flexibler Arbeitszeiten<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
