--- a/meta/5-1.md
+++ b/meta/5-1.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 
 SOURCE_TYPE: "Gleichstellungsbeauftragte Ingolstadt"  # data source  
 source_earliest_available_1: 2019
