--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 07-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Watt
+computation_units: Watt und Watt / EW
 data_start_values:  # initialize the field to be shown  
  - field: Anlagenart
    value: Biomasse in Watt
@@ -30,7 +30,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Strom aus Biomasse, Wasserkraft und Photovoltaik in Watt pro Einwohner/-in
 
 SOURCE_TYPE: <a href="https://sw-i.de/strom/">Stadtwerke Ingolstadt</a> # data source  
 source_earliest_available_1: 2018
