--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Zubau Photovoltaik in Kilowatt Peak
 
 SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/Adressen/Stabsstelle-Klima-Biodiversit%C3%A4t-Donau.php?object=tx,2789.1.1&ModID=9&FID=465.3033.1&NavID=2789.173&La=1">Stabsstelle Strategien Klima, Biodiversität und Donau</a> # data source  
 source_earliest_available_1: 1993
