--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Ladesäulenpunkte
+computation_definitions: Anzahl der öffentlichen Normal- und Schnellladepunkte ab 3,7 kW
 
 SOURCE_TYPE: <a href="https://www.bundesnetzagentur.de/DE/Fachthemen/ElektrizitaetundGas/E-Mobilitaet/Ladesaeulenkarte/start.html">Bundesnetzagentur - Ladesäuleninfrastruktur</a> # data source  
 source_earliest_available_1: 2016
