--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -39,7 +39,7 @@ Von den Regierungsbezirken erreichen Oberbayern mit 67 590 Euro und Mittelfranke
 wirtschaftsstärksten Gebieten Ingolstadt mit 140 365 Euro, der Landkreis München mit 130 374 Euro sowie die kreisfreie Stadt Coburg mit 112 120 Euro je Einwohner. In den
 kreisfreien Städten liegt das Bruttoinlandsprodukt je Einwohner mit durchschnittlich 79 572 Euro deutlich höher als in den Landkreisen mit 43 299 Euro. (Quelle: <a href="https://statistik.bayern.de/presse/mitteilungen/2024/pm210/index.html#:~:text=Das%20Bruttoinlandsprodukt%20je%20Einwohner%2C%20das,je%20Einwohner%20die%20h%C3%B6chsten%20Werte.">Pressemitteilung 26.07.2024, Bayerisches Landesamt für Statistik</a>)<br>
 <br>
-<b>Ziele Nachhaltigkeitsagenda Ingolstadt:<b><br>
+<b>Ziele Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
