--- a/meta/8-6.md
+++ b/meta/8-6.md
@@ -45,7 +45,7 @@ reporting_status: complete
 ---
 Dieser Indikator zeigt die Anzahl der sv-Beschäftigten (Sozialversicherungspflichtig) unterteilt nach Geschlecht, Alter (über / unter 55 Jahre), Deutsch / Nicht-Deutsch, Qualifikation (Ausbildung / Hochschulabschluss) an.<br>
 <br>
-Es handelt sich dabei um Wohnortsstatistiken. Festzustellen sind auch weiterhin hohe Zahlen an Eintritten in den Ruhestand oder kurz davor (sv-Beschäftigte über 55 Jahre) sowie ein steigender Anteil an Akademiker/-innen und ein sinkender Anteil an Personen mit anerkanntem Berufsabschluss.
+Es handelt sich dabei um Wohnortsstatistiken. Festzustellen sind auch weiterhin hohe Zahlen an Eintritten in den Ruhestand oder kurz davor (sv-Beschäftigte über 55 Jahre) sowie ein steigender Anteil an Akademiker/-innen und ein sinkender Anteil an Personen mit anerkanntem Berufsabschluss.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
