--- a/meta/9-5.md
+++ b/meta/9-5.md
@@ -33,7 +33,7 @@ reporting_status: inprogress
 ---
 
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W2.1: Aufbau Ingolstadt als Wissenschaftsstandort <br>
+W3.2: Digitale Infrastruktur<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
