--- a/meta/10-6.md
+++ b/meta/10-6.md
@@ -35,4 +35,7 @@ reporting_status: complete
 ---
 Anzahl der Einbürgerungen pro Jahr in Ingolstadt nach Geschlecht.<br>
 <br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.1.3: Förderung des interkulturellen und interreligiösen Dialogs<br>
+<br>
 <b>BNK-Indikator</b>
