--- a/meta/10-9.md
+++ b/meta/10-9.md
@@ -34,4 +34,7 @@ reporting_status: inprogress
 ---
 V1.2: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung<br>
 <br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.2: Schutz und Prävention vor häuslicher und sexueller Gewalt und Diskriminierung, Reduzierung der Gewalttaten und der Gewalt in Einrichtungen für Menschen mit Behinderung<br>
+<br>
 <b>Ingolstadtspezifischer Indikator</b>
