--- a/meta/11-1.md
+++ b/meta/11-1.md
@@ -40,6 +40,6 @@ reporting_status: complete
 Anteil der reinen Elektrofahrzeuge am Gesamtbestand in %, jeweils zum 01.01.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.4: Elektro-Mobilität<br>
+N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
