--- a/meta/11-3.md
+++ b/meta/11-3.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Dieser Indikator stellt dar, welchen Anteil die GWG gesamtstädtisch an den Wohnungen hat. Er gibt keinen Aufschluss darüber, wie viele barriererfreie Wohnungen in Ingolstadt insgesamt existieren.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.1: N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
+N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
